# rws-benthos_rapportage

./: .gitignore  .pre-commit-config.yaml  README.md  logging.conf  main.py  pyproject.toml  setup.cfg
analysis/: BISI.py  __init__.py  analysis_tree.py  density.py  eunis.py  margalef.py  new_disappeared_species.py  plotter.py  shannon.py  species_richness.py  tables.py
checks/: __init__.py  check_config.py  check_data.py  check_tables.py
configs/: BISI.xlsx  aquadesk.yaml  aquadesk_corrections.yaml  bisi_config.csv  clustered_sample_year.yaml  data_model.csv  exotics.csv  global_variables.yaml  hierarchy.yaml  locations.csv  taxon_groups.csv  taxonomic_order.csv  twn_corrections.yaml  typical_species_habitat_protected_areas.csv  waterbodies.csv
documentation/: Gebruikers en beheerders handleiding.md
input/: selectie_project.txt  selectie_waterlichaam.txt
preparation/: __init__.py  add_mapping.py  aquadesk.py  benthos_data.py  benthos_data_helpers.py  check_decorator.py  ddecoapi_data_parser.py  diversity.py  log_decorator.py  process_twn.py  protocol_mapping.py  read_system_config.py  read_user_config.py  taxa_mapping.py  utility.py
sphinx_docs/: Makefile  conf.py  configuration files.rst  index.rst  installation.rst  known issues.rst  run main.rst
tests/: __init__.py  conftest.py  test_add_mapping.py  test_analysis.py  test_aquadesk.py  test_benthos_data.py  test_benthos_data_helpers.py  test_bisi.py  test_check_config.py  test_check_data.py  test_density.py  test_diversity.py  test_eunis.py  test_margalef.py  test_new_disappeared_species.py  test_plotter.py  test_process_twn.py  test_protocol_mapping.py  test_shannon.py  test_species_richness.py  test_system_config.py  test_tables.py  test_taxa_mapping.py  test_user_config.py  test_utility.py
tests/fixtures/add_mapping/: input_add_groups.csv  input_add_hierarchical_groups.csv  input_add_protocol.csv  input_add_taxa.csv  input_add_twn.csv  input_add_twn_hierarchical_groups.csv  input_add_vaild_taxonnames.csv  input_integration_add_mapping.csv  input_protocol_mapping.csv  output_add_hierarchical_groups.csv  output_add_twn.csv  output_integration_add_mapping.csv
tests/fixtures/analysis/: input_analysis_main.csv  input_analysis_main_two_waterbody.csv  output_analysis_sample_a_year.csv
tests/fixtures/benthos_data/: benthos_data_end.csv  input_abundance_to_presence.csv  input_add_group_color.csv  input_add_location_data.csv  input_add_waterbody_data.csv  input_aggregate_analysis_taxa.csv  input_aggregate_analysis_taxa_error.csv  input_aggregate_taxa.csv  input_benthos_data_integration.csv  input_benthos_data_integration_location.csv  input_benthos_density.csv  input_biomass_to_missing.csv  input_check_season.csv  input_check_season_no_autumn.csv  input_cluster_sample_year.csv  input_coverage_to_column.csv  input_extract_ecotoop_code.csv  input_extract_ecotoop_code_empty.csv  input_extract_ecotoop_code_mixed.csv  input_extract_ecotoop_code_multi.csv  input_filter_required_rows.csv  input_filter_waterbodies.csv  input_presence_to_abundance.csv  input_sample_device_to_column.csv  input_support_to_column.csv  input_taxa_quantities_to_columns.csv  input_usage_samples.csv  (+25 more)
(+77 files in other folders)
