[coverage:report]
omit =
    tests/*
    */__init__.py

[tool:pytest]
testpaths = tests

[metadata]
name = Benthos deel C (RWS)
version = 0.1.0
description = This python scripts automates generating figures and tables for deel C.
long_description = file: README.md
long_description_content_type = text/markdown
author = M. Japink & J. Haringa
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3
    Topic :: Software Development
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS

[isort]
sections =
    FUTURE,
    STDLIB,
    THIRDPARTY,
    FIRSTPARTY,
    LOCALFOLDER
default_section = THIRDPARTY
known_local_folder= rws_project
known_third_party =
    numpy,
    pandas,
    keras,
    yaml,
    pytest,
    tensorflow,
    openpyxl,
    sklearn,
    matplotlib,
    plotnine,
    requests,
    scipy
multi_line_output = 3
lines_after_imports = 2
force_single_line = True
force_sort_within_sections = True
use_parentheses = True
ensure_newline_before_comments = True
line_length = 80


[flake8]
exclude = .git,__pycache__,docs,old,build,dist
max-complexity = 30
max-line-length = 120
ignore=W504,F401,E402,E266,E203,W503,C408,C416,B001,W291,W605,E712


[mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
follow_imports = silent
check_untyped_defs = false
disallow_incomplete_defs = true
disallow_untyped_defs = false
disallow_subclassing_any = false
strict_optional = false
no_implicit_optional = false
warn_no_return = true
warn_unreachable = true

[pydocstyle]
inherit = false
ignore = D401, D400
match = .*\.py

[pylint.config]
[pylint.main]

extension-pkg-whitelist=
    numpy,
    pandas,
    keras,
    tensorflow,
    sklearn,
    matplotlib,
    scipy

disable=
    invalid-name,
    logging-fstring-interpolation,
    too-many-locals,
    too-many-statements,
    too-many-arguments,
    too-many-lines,
    too-many-nested-blocks,
    too-many-branches,
    pointless-string-statement,
    wrong-import-position,
    broad-exception-raised,
    broad-exception-caught,
    logging-not-lazy,
    line-too-long,
    redefined-outer-name

max-line-length=120

[MESSAGES CONTROL]

disable=R,C
enable=E,W
jobs=1
confidence=HIGH

[FORMAT]

max-line-length = 120
max-module-lines = 2000
